# embedded-profiling

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: rust.yml
embedded-profiling/: Cargo.toml  README.md
embedded-profiling-examples/: Cargo.toml  build.rs  memory.x
embedded-profiling-examples/.cargo/: config.toml
embedded-profiling-examples/src/: lib.rs  prelude.rs  usb_serial.rs  usb_serial_log.rs
embedded-profiling-proc-macros/: Cargo.toml  README.md
embedded-profiling-proc-macros/src/: lib.rs
embedded-profiling-proc-macros/tests/: fn_name.rs
embedded-profiling/.cargo/: config.toml
embedded-profiling/src/: dwt_systick.rs  lib.rs  mock.rs  prelude.rs
ep-dwt/: Cargo.toml  README.md
ep-dwt/src/: lib.rs
ep-pin-toggle/: Cargo.toml  README.md
ep-pin-toggle/src/: lib.rs
ep-systick/: Cargo.toml  README.md
ep-systick/src/: lib.rs
src/: lib.rs  mock.rs
