[workspace]
members = [
    "embedded-profiling",
    "embedded-profiling-proc-macros",
    "embedded-profiling-examples",
    "ep-dwt",
    "ep-pin-toggle",
    "ep-systick",
]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 'z'

[patch.crates-io]
cortex-m = { git = 'https://github.com/TDHolmes/cortex-m', package = 'cortex-m', branch = 'comparator-changes-only' }
