[package]
name = "embedded-profiling-examples"
version = "0.1.0"
edition = "2018"

[dependencies]
embedded-profiling = { path = "../embedded-profiling" }
feather_m4 = { git = "https://github.com/atsamd-rs/atsamd/", features = ["usb", "unproven", "rt"] }
panic-halt = "0.2"
usb-device = "0.2"
usbd-serial = "0.1"
cortex-m = "0.7"