cargo-features = ["per-package-target"]

[package]
name = "embedded-profiling-examples"
version = "0.1.0"
edition = "2018"
forced-target = "thumbv7em-none-eabihf"

[dependencies]
embedded-profiling = { path = "../embedded-profiling", features = ["proc-macros"] }
feather_m4 = { git = "https://github.com/atsamd-rs/atsamd/", features = ["usb", "unproven", "rt"] }
panic-persist = {version = "0.3", optional = true}
panic-halt = "0.2"
usb-device = "0.2"
usbd-serial = "0.1"
cortex-m = "0.7"
heapless = "0.7"
log = "0.4"

[features]
default = ["panic_persist"]
panic_persist = ["panic-persist"]
