[package]
name = "embedded-profiling-examples"
version = "0.0.0"
edition = "2021"
description = "examples for `embedded-profiling`"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
license = "MIT OR Apache-2.0"
categories = ["development-tools::profiling"]
readme = "# Embedded Profiling Examples"

[dependencies]
embedded-profiling = { path = "../embedded-profiling", features = ["proc-macros"] }
ep-pin-toggle = { path = "../ep-pin-toggle" }
ep-dwt = { path = "../ep-dwt" }

feather_m4 = { git = "https://github.com/atsamd-rs/atsamd/", features = ["usb", "unproven", "rt"] }
panic-halt = "0.2"
cortex-m = "0.7"
heapless = "0.7"
log = "0.4"

panic-persist = {version = "0.3", optional = true}
usb-device = {version = "0.2", optional = true}
usbd-serial = {version = "0.1", optional = true}

[features]
default = ["panic_persist"]
usb = ["usb-device", "usbd-serial"]
panic_persist = ["panic-persist"]

[[bin]]
name = "delay_usb"
required-features = ["usb"]
