[package]
name = "embedded-profiling-proc-macros"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
categories = ["development-tools::profiling"]

[dependencies]
quote = { version = "1.0", default-features = false }
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"

[lib]
proc-macro=true