[package]
name = "embedded-profiling"
description = "Profiling for `no-std` embedded targets"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
categories = ["development-tools::profiling", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
fugit = "0.3"
embedded-profiling-proc-macros = { path = "../embedded-profiling-proc-macros", version = "0.1", optional = true }

[dev-dependencies]
serial_test = "0.5"

[features]
default = []
proc-macros = ["embedded-profiling-proc-macros"]
container-u64 = []

[package.metadata.docs.rs]
all-features = true
