[package]
name = "embedded-profiling"
description = "Profiling for `no-std` embedded targets"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
categories = ["development-tools::profiling", "embedded", "no-std"]
license = "MIT OR Apache-2.0"
rust-version = "1.57"

[dependencies]
fugit = ">=0.3.3,<0.4"
embedded-profiling-proc-macros = { path = "../embedded-profiling-proc-macros", version = "0.2", optional = true }

[dev-dependencies]
serial_test = "0.8"

[features]
default = []
proc-macros = ["embedded-profiling-proc-macros"]
container-u64 = []

[package.metadata.docs.rs]
all-features = true
