[package]
name = "ep-pin-toggle"
version = "0.2.0"
edition = "2021"
description = "`embedded-profiling` implementation using a GPIO toggle"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
categories = ["development-tools::profiling", "embedded"]
license = "MIT OR Apache-2.0"
rust-version = "1.57"

[dependencies]
embedded-profiling = {version = "^0.3", path = "../embedded-profiling"}
embedded-hal = "0.2"

[dev-dependencies]
cortex-m = "0.7"

[features]
proc-macros = ["embedded-profiling/proc-macros"]

[package.metadata.docs.rs]
all-features = true
