[package]
name = "ep-systick"
version = "0.1.0"
edition = "2021"
description = "`embedded-profiling` implementation using systick"
repository = "https://github.com/TDHolmes/embedded-profiling"
keywords = ["performance", "profiling", "no-std"]
categories = ["development-tools::profiling", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
embedded-profiling = {version = "0.2", path = "../embedded-profiling"}
cortex-m = "0.7"
log = "0.4"

cortex-m-rt = {version = "0.7", optional = true}

[features]
extended = ["cortex-m-rt"]
container-u64 = ["embedded-profiling/container-u64"]
